# voria

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DELIVERY_MANIFEST.md  DEVELOPMENT_SETUP.md  IMPLEMENTATION_STATUS.md  README.md  cli.js  demo_model_discovery.py  install.sh  package.json  test_phase2_integration.py  test_real_integration.py  test_victory_cli.py  test_voria_cli.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: release.yml  tests.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  EXAMPLES.md  INSTALL.md  IPC_PROTOCOL.md  LLM_INTEGRATION.md  MODULES.md  PERFORMANCE.md  PLUGINS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_TESTS.md  TROUBLESHOOTING.md  USER_GUIDE.md
python/: setup.py
python/victory/: __init__.py  engine.py
python/victory/core/: __init__.py  setup.py
python/victory/core/agent/: __init__.py  loop.py
python/victory/core/executor/: executor.py
python/victory/core/github/: __init__.py  client.py
python/victory/core/llm/: __init__.py  (+6 more)
python/voria/: __init__.py  engine.py
python/voria/core/: __init__.py  setup.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/analysis/: mod.rs
rust/src/cli/: mod.rs
rust/src/config/: mod.rs
rust/src/ipc/: mod.rs
rust/src/orchestrator/: mod.rs
rust/src/ui/: mod.rs
ui/: package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/components/: CommandsList.tsx  GitStars.tsx  TerminalCommands.tsx
(+27 files in other folders)
