[package]
name = "voria"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
colored = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
indicatif = "0.17"
console = "0.15"
tabled = "0.15"

[[bin]]
name = "voria"
path = "src/main.rs"
